# spokewith

./: dev.py  pyproject.toml
spokewith/: __main__.py  store.py
