[tool.poetry]
name = "spokewith"
version = "0.1.0"
description = "CLI/TUI Call Logging Utility"
authors = ["aidaco <aidanfc97@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.1"
rich = "^12.4.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
